<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Locule</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="map_view">Map</string>
    <string name="schedule_view">Home</string>
    <string name="description">Description</string>
    <string name="title">Title</string>
    <string name="address">Address</string>
    <string name="confirm">Submit</string>
    <string name="locationName">Location Name</string>
    <string name="locationAddress">Location Address</string>
    <string name="title_activity_schedule">ScheduleActivity</string>
    <string name="title_activity_map">MapActivity</string>
    <string name="title_activity_switch_map">SwitchMap</string>
    <string name="title_activity_switch_schedule">SwitchSchedule</string>
    <string name="title_add_event_activity">Add Event</string>
    
	    <string-array name="nav_drawer_items">
        <item >Home</item>
        <item >Map</item>
        <item >Locations</item>
        <item >History</item>
    </string-array>
   
	        <array name="nav_drawer_icons">
        <item>@drawable/ic_home</item>
        <item>@drawable/ic_people</item>
        <item>@drawable/ic_photos</item>
        <item>@drawable/ic_communities</item>
    </array>
	    
    <string name="desc_list_item_icon">Item Icon</string>
    <string-array name="event_actions">
        <item>View</item>
        <item>Edit</item>
        <item>Delete</item>
    </string-array>
</resources>
