<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    
    <TextView
        android:id="@+id/txtLabel"
         android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:textSize="16dp"
        android:text="What's Hot View"/>
    

       
<LinearLayout
    android:orientation="vertical"
    android:layout_height = "fill_parent"
    android:layout_width = "fill_parent"
    android:weightSum="1.0">

   
    
    <LinearLayout
        android:orientation="horizontal"
        android:layout_weight=".9"
        android:layout_height = "0dp"
        android:layout_width = "0dp"
        android:weightSum= "1.0">
        
        

    </LinearLayout>
    
    
   <LinearLayout
        android:id="@+id/footer"
        android:layout_weight=".1"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:background="#66ffff"
        android:weightSum="1.0">

        <Button
            android:id="@+id/Schedule"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight = ".2"
            android:text="@string/schedule_view"
            android:background="#5ce6e6"
            android:onClick="switchMain" />
		<View
		    android:layout_width="1dp"
		    android:layout_height="fill_parent"
		    android:background="#FFFFFF"/>
        <TextView
            android:id="@+id/Timer"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight=".6"
            android:gravity="center"
            android:text="@string/app_name"
            android:textAppearance="?android:attr/textAppearanceLarge" />
		<View
		    android:layout_width="1dp"
		    android:layout_height="fill_parent"
		    android:background="#FFFFFF"/>
        <Button
            android:id="@+id/Map"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight=".2"
            android:text="@string/map_view" 
            android:background="#5ce6e6" 
            android:onClick="switchMap"/>

        
    </LinearLayout>

</LinearLayout>
    

    
    
</RelativeLayout>
